MOSIP-42881 - Added maultilanguage support to the framework
Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>