@@ -9,6 +9,7 @@ import java.util.Properties;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
+import base.BaseTest;
 import org.junit.runner.RunWith;
 import org.testng.TestNG;
 import org.testng.annotations.DataProvider;
@@ -24,6 +25,7 @@ import io.cucumber.testng.PickleWrapper;
 import utils.BaseTestUtil;
 import utils.EsignetConfigManager;
 import utils.ExtentReportManager;
+import utils.LanguageUtil;
 
 @RunWith(Cucumber.class)
 @CucumberOptions(
@@ -31,9 +33,9 @@ import utils.ExtentReportManager;
         glue = {"stepdefinitions", "base"},
         monochrome = true,
         plugin = {"pretty",
-        			"html:reports",
-        			"html:target/cucumber.html", "json:target/cucumber.json",
-        			"summary","com.aventstack.extentreports.cucumber.adapter.ExtentCucumberAdapter:"}
+                "html:reports",
+                "html:target/cucumber.html", "json:target/cucumber.json",
+                "summary","com.aventstack.extentreports.cucumber.adapter.ExtentCucumberAdapter:"}
 //      tags = "@smoke"
 )
 public class Runner extends AbstractTestNGCucumberTests {
@@ -53,21 +55,23 @@ public class Runner extends AbstractTestNGCucumberTests {
 		boolean runMultipleBrowsers = Boolean.parseBoolean(EsignetConfigManager.getproperty("runMultipleBrowsers"));
 		List<String> browsers = BaseTestUtil.getSupportedLocalBrowsers();
 
-		if (runMultipleBrowsers && base.length > 0 && browsers != null && !browsers.isEmpty()) {
-			List<Object[]> expanded = new ArrayList<>();
-			for (Object[] scenario : base) {
-				for (String browser : browsers) {
-					expanded.add(new Object[] { scenario[0], scenario[1], browser });
-				}
-			}
-			return expanded.toArray(new Object[0][]);
-		}
+        String lang = System.getProperty("currentRunLanguage");
+
+        if (runMultipleBrowsers && base.length > 0 && !browsers.isEmpty()) {
+            List<Object[]> expanded = new ArrayList<>();
+                for (Object[] scenario : base) {
+                    for (String browser : browsers) {
+                        expanded.add(new Object[]{scenario[0], scenario[1], browser, lang});
+                    }
+            }
+            return expanded.toArray(new Object[0][]);
+        }
 
 		// Single browser fallback
 		List<Object[]> fallback = new ArrayList<>();
-		for (Object[] scenario : base) {
-			fallback.add(new Object[] { scenario[0], scenario[1], browsers.get(0) });
-		}
+            for (Object[] scenario : base) {
+                fallback.add(new Object[]{scenario[0], scenario[1], browsers.getFirst(), lang});
+        }
 
 		System.setProperty("testng.threadcount", String.valueOf(EsignetConfigManager.getproperty("threadCount")));
 
@@ -75,8 +79,9 @@ public class Runner extends AbstractTestNGCucumberTests {
 	}
 
 	@Test(dataProvider = "scenarios")
-	public void runCustomScenario(PickleWrapper pickle, FeatureWrapper feature, String browser) throws Throwable {
+	public void runCustomScenario(PickleWrapper pickle, FeatureWrapper feature, String browser, String lang) throws Throwable {
 		BaseTestUtil.setThreadLocalBrowser(browser);
+        BaseTestUtil.setThreadLocalLanguage(lang);
 		super.runScenario(pickle, feature);
 	}
 
@@ -90,8 +95,37 @@ public class Runner extends AbstractTestNGCucumberTests {
 		try {
 			LOGGER.info("** ------------- Esignet UI Automation run started---------------------------- **");
 			EsignetConfigManager.init();
-			ExtentReportManager.initReport();
-			startTestRunner();
+
+            List<String> languages = new ArrayList<>();
+            String runLang = EsignetConfigManager.getproperty("runLanguage");
+
+            if (runLang != null && !runLang.trim().isEmpty()) {
+                LOGGER.info("Using runLanguage from config: " + runLang);
+                // split by comma and trim spaces
+                String[] langs = runLang.split(",");
+                for (String lang : langs) {
+                    if (!lang.trim().isEmpty()) {
+                        languages.add(lang.trim());
+                    }
+                }
+            } else {
+                LOGGER.info("No runLanguage in config, loading from LanguageUtil");
+                languages = LanguageUtil.supportedLanguages;
+            }
+
+            for (String lang : languages) {
+                System.setProperty("currentRunLanguage", lang);
+                resetCounters();
+                ExtentReportManager.initReport(lang);
+
+                LOGGER.info("=== Starting run for language: " + lang + " ===");
+                startTestRunner();
+
+                // flush & upload this language report
+                ExtentReportManager.flushReport();
+                BaseTest.pushReportsToS3(lang);
+            }
+
 		} catch (Exception e) {
 			LOGGER.severe("Exception " + e.getMessage());
 		}
@@ -156,4 +190,10 @@ public class Runner extends AbstractTestNGCucumberTests {
 		else
 			return "IDE";
 	}
+
+    public static void resetCounters() {
+        BaseTest.totalCount = 0;
+        BaseTest.passedCount = 0;
+        BaseTest.failedCount = 0;
+    }
 }
